--- a/README.me
+++ b/README.me
@@ -25,7 +25,7 @@ Fuente de datos: [https://duemint.s3.amazonaws.com/uploads/files/invoices.csv](h
 	# REDIS_PORT=
 	# REDIS_PWD=
 
-    # Una vez instalado y configurado el stack, correr el servicio. API Url http://localhost:4000/
+    # Una vez instalado y configurado el stack, correr el servicio. API Url http://localhost:4000
     npm run start
 
 
@@ -33,7 +33,7 @@ Fuente de datos: [https://duemint.s3.amazonaws.com/uploads/files/invoices.csv](h
     cd frontend
     yarn install
 
-    # Una vez instalado el stack, correr el servicio. Url http://localhost:8080/
+    # Una vez instalado el stack, correr el servicio. Url http://localhost:8080
     npm run serve
 
 
