feat(frontend): filter to get data by person

--- a/README.me
+++ b/README.me
@@ -39,4 +39,4 @@ Fuente de datos: [https://duemint.s3.amazonaws.com/uploads/files/invoices.csv](h
 
 
 # Procesos automáticos
-En la API (backend), se encuentra configurado un cron que se ejecuta cada noche a las 00, el cual procesa, calcula y guarda en MongoDB los datos de las facturas agrupadas por año y mes.
+En la API (backend), se encuentran configurados dos cron que se ejecutan cada noche a las 00, los cuales procesan, calculan y guardan en MongoDB los datos de las facturas agrupadas por año, mes y por persona.
